# PhotoEdits

./: CMakeLists.txt  Image.cpp  Image.hpp  README.md  main.cpp  windoo.cpp  windoo.hpp  windoo.ui
src/: Image.cpp  Image.hpp  main.cpp  windoo.cpp  windoo.hpp
